# gmmsales-backend/routes/api.php
@@ -4,18 +4,29 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\CustomerController;
 use App\Http\Controllers\AdminCustomerController;
+use App\Http\Controllers\AdminSalesController;
+use App\Http\Controllers\ProfileController;
 
 Route::post('/login', [AuthController::class, 'login']);
 
 Route::middleware('auth:sanctum')->group(function () {
     Route::post('/logout', [AuthController::class, 'logout']);
+
     Route::post('/customers', [CustomerController::class, 'store']);
     Route::get('/customers', [CustomerController::class, 'index']);
     Route::get('/customers/history', [CustomerController::class, 'history']);
     Route::get('/customers/{id}', [CustomerController::class, 'show']);
     Route::delete('/customers/{id}', [CustomerController::class, 'destroy']);
+
+    Route::post('/profile/photo', [ProfileController::class, 'uploadPhoto']);
+
     Route::middleware('is_admin')->prefix('admin')->group(function () {
         Route::get('/customers', [AdminCustomerController::class, 'index']);
         Route::get('/customers/{id}', [AdminCustomerController::class, 'show']);
+        Route::post('/sales', [AdminSalesController::class, 'store']);
+        Route::get('/sales', [AdminSalesController::class, 'index']);
+        Route::get('/sales/{id}', [AdminSalesController::class, 'show']);
+        Route::put('/sales/{id}', [AdminSalesController::class, 'update']);
+        Route::delete('/sales/{id}', [AdminSalesController::class, 'destroy']);
     });
 });
